--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-semantic-ui-range": "^0.7.1",
     "recompose": "^0.30.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
