--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.2",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/styles": "^4.11.4",
     "@sentry/react": "^6.14.3",
     "@sentry/tracing": "^6.14.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,6 +14,7 @@
     "axios": "^0.21.1",
     "craco-alias": "^2.2.0",
     "lodash": "^4.17.21",
+    "material-ui-slider": "^3.0.8",
     "react": "^17.0.2",
     "react-async-loader": "^0.1.2",
     "react-dom": "^17.0.2",
