--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "craco-alias": "^2.2.0",
     "lodash": "^4.17.21",
     "material-ui-slider": "^3.0.8",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-async-loader": "^0.1.2",
     "react-dom": "^17.0.2",
