--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "craco-alias": "^2.2.0",
+    "echarts": "^5.3.2",
+    "echarts-for-react": "^3.0.2",
     "lodash": "^4.17.21",
     "material-ui-slider": "^3.0.8",
     "ramda": "^0.28.0",
