--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@artsy/fresnel": "^3.2.1",
     "@craco/craco": "^6.1.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/styles": "^4.11.4",
@@ -21,6 +22,8 @@
     "react": "^17.0.2",
     "react-async-loader": "^0.1.2",
     "react-dom": "^17.0.2",
+    "react-google-autocomplete": "^2.7.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
