--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-async-loader": "^0.1.2",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "^17.0.2",
     "react-google-autocomplete": "^2.7.0",
     "react-google-maps": "^9.4.5",
