--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "craco-alias": "^2.2.0",
     "echarts": "^5.3.2",
     "echarts-for-react": "^3.0.2",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "material-ui-slider": "^3.0.8",
     "pannellum-react": "^1.2.4",
