--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-semantic-ui-range": "^0.7.1",
+    "react-zoom-pan-pinch": "^2.1.3",
     "recompose": "^0.30.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
