--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "material-ui-slider": "^3.0.8",
+    "moment": "^2.29.4",
     "pannellum-react": "^1.2.4",
     "ramda": "^0.28.0",
     "react": "^17.0.2",
